# aria2

./: .clang-format  .dockerignore  .gitignore  .travis.yml  ABOUT-NLS  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.old  Dockerfile  Dockerfile.android  Dockerfile.mingw  Dockerfile.raspberrypi  INSTALL  LICENSE.OpenSSL  Makefile.am  Makefile.in  NEWS  README  README.android  README.asciidoc  README.html  README.mingw  README.rst  TODO  aclocal.m4  android-config  android-make  android-release  aria2.spec  build_osx_release.sh  build_test.sh  config.h.in  config.rpath  config.sub  configure  configure.ac  configure.in  import-po  makerelease  (+9 more)
build-release/cppunit/: AUTHORS  BUGS  ChangeLog  CodingGuideLines.txt  INSTALL-WIN32.txt  INSTALL-unix  Makefile.am  NEWS  README  THANKS  TODO  configure.in  cppunit-config.1  cppunit-config.in  cppunit.pc.in  cppunit.spec  cppunit.spec.in
build-release/expat/: CMake.README  CMakeLists.txt  ConfigureChecks.cmake  configure.in  expat.dsw  expat.pc.in  expat_config.h.cmake  expat_config.h.in
build-release/gmp/: .gdbinit  AUTHORS  ChangeLog  INSTALL.autoconf  Makefile.am  NEWS  README  assert.c  bootstrap.c  compat.c  config.in  configfsf.guess  configfsf.sub  configure.ac  errno.c  extract-dbl.c  gen-bases.c  gen-fac.c  gen-fib.c  gen-jacobitab.c  gen-psqr.c  gen-trialdivtab.c  gmp-h.in  gmp-impl.h  gmpxx.h  invalid.c  longlong.h  memory.c  mp_bpl.c  mp_clz_tab.c  mp_dv_tab.c  mp_get_fns.c  mp_minv_tab.c  mp_set_fns.c  nextprime.c  primesieve.c  tal-debug.c  tal-notreent.c  tal-reent.c  version.c  (+1 more)
build-release/sqlite/: Makefile.am  README  configure.ac  shell.c
doc/: CMakeLists.txt  Makefile.am  Makefile.in  README.txt  aria2c.1  aria2c.1.asciidoc  aria2c.1.html  aria2c.1.txt  aria2c.t2t  makeman  optref.py
doc/bash_completion/: README.txt  aria2c  make_bash_completion.py
doc/manual-src/: .gitignore  CMakeLists.txt  Makefile.am
doc/osx-package/: DS_Store
doc/ru/: Makefile.am  aria2c.1  aria2c.1.asciidoc
doc/xmlrpc/: README.txt  aria2mon  aria2rpc
doc/zsh_completion/: _aria2c
m4/: ChangeLog  Makefile  Makefile.am  Makefile.in  aria2_arg.m4  ax_cxx_compile_stdcxx_11.m4  codeset.m4  cppunit.m4  fallocate.m4  glibc2.m4  glibc21.m4  intdiv0.m4  intl.m4  intldir.m4  intlmacosx.m4  intmax.m4  inttypes-pri.m4  inttypes_h.m4  lcmessage.m4  lib-prefix.m4  libares.m4  libcares.m4  libexpat.m4  libgcrypt.m4  libgnutls-extra.m4  libgnutls.m4  libz.m4  lock.m4  longlong.m4  openssl.m4  pkg.m4  printf-posix.m4  size_max.m4  sqlite3.m4  stdint_h.m4  uintmax_t.m4  visibility.m4  wchar_t.m4  wint_t.m4  xsize.m4  (+1 more)
src/: .gitignore  A2STR.cc  A2STR.h  ARC4Decryptor.h  ARC4Encryptor.h  AbstractAuthResolver.cc  AbstractAuthResolver.h  AbstractBtEventListener.h  AbstractBtMessage.cc  AbstractBtMessage.h  AbstractCommand.cc  AbstractCommand.h  AbstractDiskWriter.cc  AbstractDiskWriter.h  AbstractHttpServerResponseCommand.cc  AbstractHttpServerResponseCommand.h  AbstractOptionHandler.cc  AbstractOptionHandler.h  AbstractProxyRequestCommand.cc  AbstractProxyRequestCommand.h  AbstractProxyResponseCommand.cc  AbstractProxyResponseCommand.h  AbstractSegmentManFactory.h  AbstractSingleDiskAdaptor.cc  AbstractSingleDiskAdaptor.h  ActivePeerConnectionCommand.cc  ActivePeerConnectionCommand.h  AdaptiveFileAllocationIterator.cc  AdaptiveFileAllocationIterator.h  AdaptiveURISelector.cc  AdaptiveURISelector.h  Adler32MessageDigestImpl.cc  Adler32MessageDigestImpl.h  AllowedFastMessage.cc  AllowedFastMessage.h  AlphaNumberDecorator.cc  AlphaNumberDecorator.h  AnnounceList.cc  AnnounceList.h  AnnounceTier.cc  (+1316 more)
src/android/: README.rst  android.c  arm-ftruncate64.S  mips-ftruncate64.S  x86-asm.h  x86-ftruncate64.S
src/getopt/: getopt.c  getopt.h
src/includes/: CMakeLists.txt  Makefile.am
test/: .gitignore  2files.metalink  4096chunk.txt  ARC4Test.cc  AbstractCommandTest.cc  AllTest.cc  AllowedFastMessageTest.cc  AlphaNumberDecoratorTest.cc  AnnounceListTest.cc  Aria2ApiTest.cc  AsyncNameResolverTest.cc  AuthConfigFactoryTest.cc  AuthConfigTest.cc  BDETest.cc  BNodeTest.cc  Base32Test.cc  Base64Test.cc  Bencode2Test.cc  BencodeTest.cc  BencodeVisitorTest.cc  BitfieldManTest.cc  BitfieldMessageTest.cc  BittorrentHelperTest.cc  BtAllowedFastMessageTest.cc  BtBitfieldMessageTest.cc  BtCancelMessageTest.cc  BtChokeMessageTest.cc  BtDependencyTest.cc  BtExtendedMessageTest.cc  BtHandshakeMessageTest.cc  BtHaveAllMessageTest.cc  BtHaveMessageTest.cc  BtHaveNoneMessageTest.cc  BtInterestedMessageTest.cc  BtKeepAliveMessageTest.cc  BtNotInterestedMessageTest.cc  BtPieceMessageTest.cc  BtPortMessageTest.cc  BtPostDownloadHandlerTest.cc  BtRegistryTest.cc  (+281 more)
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  install-sh
trunk/intl/: ChangeLog  bindtextdom.c  config.charset  dcgettext.c  dcigettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  gmo.h  intl-compat.c  libgnuintl.h.in  localcharset.c  localealias.c  localename.c  ngettext.c  osdep.c  plural-exp.h  relocatable.h  textdomain.c
trunk/m4/: isc-posix.m4  openssl.m4
trunk/po/: Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  de.po
trunk/src/: AbstractCommand.cc  AbstractCommand.h  AbstractDiskWriter.cc  AbstractDiskWriter.h  AllowedFastMessage.cc  Base64.cc  Base64.h  BitfieldMan.cc  ByteArrayDiskWriter.cc  CancelMessage.cc  CancelMessage.h  ChunkedEncoding.cc  Command.h  CompactTrackerResponseProcessor.h  ConsoleDownloadEngine.cc  CookieBox.cc  CookieBox.h  DefaultDiskWriter.cc  Dictionary.cc  Directory.h  DiskAdaptor.cc  DiskAdaptor.h  DiskWriter.h  DlAbortEx.h  DlRetryEx.h  DownloadCommand.h  DownloadEngine.cc  DownloadEngine.h  Exception.h  File.cc  File.h  FtpDownloadCommand.cc  FtpNegotiationCommand.cc  FtpNegotiationCommand.h  FtpTunnelRequestCommand.cc  FtpTunnelRequestCommand.h  FtpTunnelResponseCommand.h  HandshakeMessage.cc  HaveAllMessage.cc  HaveMessage.cc  (+75 more)
trunk/test/: AllTest.cc  BitfieldManTest.cc  CancelMessageTest.cc  ChokeMessageTest.cc  ChunkedEncodingTest.cc  CookieBoxTest.cc  FileTest.cc  (+12 more)
(+3004 files in other folders)
